[package]
name = "singer"
authors = ["kosette"]
description = "A simple tool to manage sing-box"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
nix = "0.29.0"
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }
