[package]
name = "singer"
authors = ["kosette"]
description = "A simple tool to manage sing-box"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
dirs = "5.0.1"
nix = "0.29.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }
